testsuite/tests/overloadedrecflds/should_fail/DRFHoleFits.hs
{-# LANGUAGE DuplicateRecordFields #-}

module DRFHoleFits where

data T = MkT { foo :: Int }

bar = _ :: T -> Int
